--- a/guides/saved-schema-api.mdx
+++ b/guides/saved-schema-api.mdx
@@ -105,39 +105,55 @@ All types of function declarations are accepted:
 
 <AccordionGroup>
   <Accordion title="Row hook example">
-    To define a row hook, you could pass the following to the API's `hooks` parameter:
+    Define your row hook as a JavaScript function:
 
     <CodeGroup>
-    ```json
+    ```javascript JavaScript Function
+    (record, mode) => {
+      record.row.zipCode.value = record.row.zipCode.value.padStart(5, '0');
+      return record;
+    }
+    ```
+
+    ```json API Payload
     {
       "rowHooks": [
-        "(record, mode) => { 
-          record.row.zipCode.value = record.row.zipCode.value.padStart(5, '0'); 
-          return record; 
-        }"
+        "(record, mode) => { record.row.zipCode.value = record.row.zipCode.value.padStart(5, '0'); return record; }"
       ]
     }
     ```
     </CodeGroup>
+
+    <Note>
+      When passing to the API, the function must be stringified on a single line as shown in the API Payload tab.
+    </Note>
   </Accordion>
 
   <Accordion title="Step hook example">
-    To define a step hook, you could pass the following to the API's `hooks` parameter:
+    Define your step hook as a JavaScript function:
 
     <CodeGroup>
-    ```json
+    ```javascript JavaScript Function
+    (instance) => {
+      instance.addField({ label: 'Full Name', key: 'fullName' });
+    }
+    ```
+
+    ```json API Payload
     {
       "stepHooks": [
         {
           "type": "REVIEW_STEP",
-          "callback": "(instance) => { 
-            instance.addField({ label: 'Full Name', key: 'fullName' }); 
-          }"
+          "callback": "(instance) => { instance.addField({ label: 'Full Name', key: 'fullName' }); }"
         }
       ]
     }
     ```
     </CodeGroup>
+
+    <Note>
+      When passing to the API, the function must be stringified on a single line as shown in the API Payload tab.
+    </Note>
   </Accordion>
 </AccordionGroup>
 
