--- a/changelog.mdx
+++ b/changelog.mdx
@@ -2,6 +2,22 @@
 title: "Changelog"
 ---
 
+<Update label="November 2025" description="v3.5.0" tags={["Styling", "Customization"]}>
+
+## Enhanced Style Override Configuration
+
+New style override configuration options for comprehensive color customization of the Dromo uploader.
+
+- **Complete Color Control**: Configure text, backgrounds, interactive elements, status colors, borders, and dividers
+- **Full Appearance Customization**: Enhanced color settings to fully customize the Dromo uploader
+- **Theme Presets**: Pre-configured light and dark theme color palettes
+- **Custom Color Schemes**: Define your own brand colors for any theme
+- **Dark Mode Support**: Dark mode now available as a result of the new color configuration options
+- **Seamless Experience**: Consistent styling across all import steps and components
+- **Documentation**: [Style Overrides Reference](https://developer.dromo.io/guides/custom-styling)
+
+</Update>
+
 <Update label="October 2025" description="v3.4.0" tags={["Styling", "Data Access", "Templates", "Date Handling"]}>
 
 ## Advanced Customization & Enhanced Data Handling
